[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/mono-modules-addon/icons/sync_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=1]
[ext_resource path="res://addons/mono-modules-addon/icons/account_tree_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=2]
[ext_resource path="res://addons/mono-modules-addon/icons/folder_open_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=3]
[ext_resource path="res://addons/mono-modules-addon/icons/widgets_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=4]
[ext_resource path="res://addons/mono-modules-addon/icons/receipt_long_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=5]
[ext_resource path="res://addons/mono-modules-addon/scenes/DepEntry.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/mono-modules-addon/icons/code_blocks_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=7]
[ext_resource path="res://addons/mono-modules-addon/icons/add_FILL1_wght700_GRAD-25_opsz20.svg" type="Texture" id=8]
[ext_resource path="res://addons/mono-modules-addon/scenes/ModuleInspector.gd" type="Script" id=9]

[node name="ModuleInspector" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
dep_entry_scene = ExtResource( 6 )

[node name="HeaderButtons" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 26.0
alignment = 2

[node name="BtnRefresh" type="Button" parent="HeaderButtons"]
margin_left = 884.0
margin_right = 916.0
margin_bottom = 26.0
hint_tooltip = "Refresh the generated data. Useful if something was changed manually"
icon = ExtResource( 1 )

[node name="BtnViewGraph" type="Button" parent="HeaderButtons"]
margin_left = 920.0
margin_right = 952.0
margin_bottom = 26.0
hint_tooltip = "Show a dependency graph of this module (WIP)"
icon = ExtResource( 2 )

[node name="BtnViewCsproj" type="Button" parent="HeaderButtons"]
margin_left = 956.0
margin_right = 988.0
margin_bottom = 26.0
hint_tooltip = "View the text of the referenced *.csproj file. Can be easier to read for advanced users. "
icon = ExtResource( 7 )

[node name="BtnOpenFolder" type="Button" parent="HeaderButtons"]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 26.0
hint_tooltip = "Open the containing folder of this module in the system file explorer."
icon = ExtResource( 3 )

[node name="PropModuleName" type="HBoxContainer" parent="."]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 50.0
hint_tooltip = "The name of the module managed by this particular ModuleDef. (This should match the parent folder name)"

[node name="TextureRect" type="TextureRect" parent="PropModuleName"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 4 )

[node name="VSeparator" type="VSeparator" parent="PropModuleName"]
margin_left = 24.0
margin_right = 28.0
margin_bottom = 20.0

[node name="PropModuleNameValue" type="Label" parent="PropModuleName"]
unique_name_in_owner = true
margin_left = 32.0
margin_top = 3.0
margin_right = 58.0
margin_bottom = 17.0
text = "TBD"

[node name="PropModulePath" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 74.0
hint_tooltip = "The path of this module, relative to the project folder. "

[node name="TextureRect" type="TextureRect" parent="PropModulePath"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 3 )

[node name="VSeparator" type="VSeparator" parent="PropModulePath"]
margin_left = 24.0
margin_right = 28.0
margin_bottom = 20.0

[node name="PropModulePathValue" type="Label" parent="PropModulePath"]
unique_name_in_owner = true
margin_left = 32.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3
text = "TBD"
clip_text = true

[node name="BtnDeps" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 104.0
text = "Dependencies"
icon = ExtResource( 5 )

[node name="ListDeps" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 134.0

[node name="BtnAddNewRef" type="Button" parent="ListDeps"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 26.0
icon = ExtResource( 8 )
icon_align = 1

[node name="Control" type="HSeparator" parent="."]
margin_top = 138.0
margin_right = 1024.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 64 )

[connection signal="pressed" from="HeaderButtons/BtnRefresh" to="." method="_on_BtnRefresh_pressed"]
[connection signal="pressed" from="HeaderButtons/BtnViewGraph" to="." method="_on_BtnViewGraph_pressed"]
[connection signal="pressed" from="HeaderButtons/BtnViewCsproj" to="." method="_on_BtnViewCsproj_pressed"]
[connection signal="pressed" from="HeaderButtons/BtnOpenFolder" to="." method="_on_BtnOpenFolder_pressed"]
[connection signal="pressed" from="BtnDeps" to="." method="_on_BtnDeps_pressed"]
[connection signal="pressed" from="ListDeps/BtnAddNewRef" to="." method="_on_BtnAddNewRef_pressed"]
